# SoilTemperatureModels

./: .gitignore  CyMLTx Requirements.docx  README.md  cymltx.md  simulationData.py
Models/: build.py  convert.sh  test_cml_api.py
Models/ApsimCampbell/: SoilTemperature.cs  SoilTemperature.xml
Models/ApsimCampbell/crop2ml/: composition.SoilTemperature.xml  unit.SoilTemperature.xml
Models/ApsimCampbell/doc/: graphe.csv
Models/BiomaSurfacePartonSoilSWATC/crop2ml/: composition.SurfacePartonSoilSWATC.xml  unit.SoilTemperatureSWAT.xml  unit.SurfaceTemperatureParton.xml
Models/BiomaSurfacePartonSoilSWATC/doc/: graphe.csv
Models/BiomaSurfacePartonSoilSWATC/src/cpp/BiomaSurfacePartonSoilSWATC/: CMakeLists.txt  SoilTemperatureSWAT.cpp  SoilTemperatureSWAT.h  SurfacePartonSoilSWATCAuxiliary.cpp  SurfacePartonSoilSWATCAuxiliary.h  SurfacePartonSoilSWATCComponent.cpp  SurfacePartonSoilSWATCComponent.h  SurfacePartonSoilSWATCExogenous.cpp  SurfacePartonSoilSWATCExogenous.h  SurfacePartonSoilSWATCRate.cpp  SurfacePartonSoilSWATCRate.h  SurfacePartonSoilSWATCState.cpp  SurfacePartonSoilSWATCState.h  SurfaceTemperatureParton.cpp  SurfaceTemperatureParton.h
Models/BiomaSurfacePartonSoilSWATHourlyPartonC/crop2ml/: composition.SurfacePartonSoilSWATHourlyPartonC.xml  unit.HourlySoilTemperaturesPartonLogan.xml  unit.RangeOfSoilTemperaturesDAYCENT.xml  unit.SoilTemperatureSWAT.xml  unit.SurfaceTemperatureParton.xml  unit.ThermalConductivitySIMULAT.xml  unit.ThermalDiffu.xml  unit.VolumetricHeatCapacityKluitenberg.xml
Models/BiomaSurfacePartonSoilSWATHourlyPartonC/doc/: graphe.csv
Models/BiomaSurfaceSWATSoilSWATC/UNIMI.SoilT/: UNIMI.SoilT.csproj
Models/BiomaSurfaceSWATSoilSWATC/crop2ml/: composition.SurfaceSWATSoilSWATC.xml  unit.SoilTemperatureSWAT.xml  unit.SurfaceTemperatureSWAT.xml
Models/BiomaSurfaceSWATSoilSWATC/doc/: graphe.csv
Models/DSSAT_EPICST_standalone/: ASKEE_DSSAT_EPIC.for  ModuleDefs.for  STEMP_EPIC.for  moduledefs.mod
Models/DSSAT_EPICST_standalone/crop2ml/: composition.STEMP_EPIC.xml  unit.STEMP_EPIC.xml
Models/DSSAT_EPICST_standalone/doc/: graphe.csv
Models/DSSAT_ST_standalone/: ASKEE.for  CMakeLists.txt  DATES.for  ModuleDefs.for  OPSTEMP.for  STEMP.for  moduledefs.mod
Models/DSSAT_ST_standalone/crop2ml/: composition.STEMP.xml  unit.STEMP.xml
Models/DSSAT_ST_standalone/doc/: graphe.csv
Models/DSSAT_ST_standalone/src/cpp/DSSAT_ST_standalone/: CMakeLists.txt  STEMP.cpp  STEMP.h  STEMP_Auxiliary.cpp  STEMP_Auxiliary.h  STEMP_Component.cpp  STEMP_Component.h  STEMP_Exogenous.cpp  STEMP_Exogenous.h  STEMP_Rate.cpp  STEMP_Rate.h  STEMP_State.cpp  STEMP_State.h  program.cpp
Models/Monica_SoilTemp/: metadata.xml
Models/Monica_SoilTemp/crop2ml/: composition.SoilTemperature.xml  unit.NoSnowSoilSurfaceTemperature.xml  unit.SoilTemperature.xml  unit.WithSnowSoilSurfaceTemperature.xml  unit.frost_calc_soil_frost.xml  unit.frost_calc_thaw_depth.xml
Models/Monica_SoilTemp/doc/: graphe.csv
Models/Monica_SoilTemp/src/cpp2/Monica_SoilTemp/: CMakeLists.txt  NoSnowSoilSurfaceTemperature.cpp  NoSnowSoilSurfaceTemperature.h  SoilTemperature.cpp  SoilTemperature.h  SoilTemperatureCompAuxiliary.h  SoilTemperatureCompComponent.cpp  SoilTemperatureCompComponent.h  SoilTemperatureCompExogenous.h  SoilTemperatureCompRate.h  SoilTemperatureCompState.h  WithSnowSoilSurfaceTemperature.cpp  WithSnowSoilSurfaceTemperature.h
Models/SQ_Soil_Temperature/SiriusQuality-SoilTemperatureStrategies/: SiriusQuality-SoilTemperatureStrategies.csproj
Models/SQ_Soil_Temperature/crop2ml/: composition.SoilTemperature.xml  unit.CalculateHourlySoilTemperature.xml  unit.CalculateSoilTemperature.xml
Models/SQ_Soil_Temperature/doc/: graphe.csv
Models/Simplace_Soil_Temperature/: STMPsimCalculator.java  SnowCoverCalculator.java  soiltemp.xml
Models/Simplace_Soil_Temperature/crop2ml/: composition.SoilTemperature.xml  unit.STMPsimCalculator.xml  unit.SnowCoverCalculator.xml
Models/Stics_soil_temperature/: Layerstemp.f90  SoilTempComponent.f90  Tcanopyavg.f90  Tempamp.f90  Tempprofile.f90  Thermamp.f90  update.f90
Models/Stics_soil_temperature/crop2ml/: composition.Soiltemp.xml  composition.soil_temp.xml  unit.canopy_temp_avg.xml  unit.layers_temp.xml  unit.temp_profile.xml  unit.therm_amp.xml  unit.update.xml
Models/Stics_soil_temperature/doc/: graphe.csv
Models/Stics_soil_temperature/src/cpp/Stics_soil_temperature/: CMakeLists.txt  Canopy_temp_avg.cpp  Layers_temp.cpp  Temp_amp.cpp  Temp_profile.cpp  Update.cpp  canopy_temp_avg.h  layers_temp.h  soil_tempAuxiliary.cpp  soil_tempAuxiliary.h  soil_tempComponent.cpp  soil_tempComponent.h  soil_tempExogenous.cpp  soil_tempExogenous.h  soil_tempRate.cpp  soil_tempRate.h  soil_tempState.cpp  soil_tempState.h  temp_amp.h  temp_profile.h  therm_amp.h  update.h
Models/campbell_SoilTemp/: ApsimCampbellPython.py  Apsim_SoilTemperature.ipynb  FunctionCampbell.py  InitCampbellInProgress.py  README.md  SoilTemperature.cs  SoilTemperature.py
Models/campbell_SoilTemp/ApsimCampbellPython/: ApsimCampbellPython.sln
Models/campbell_SoilTemp/Campbell/: Campbell_Component.py  README.md  campbell.py  convert.py  metadata.xml
Models/campbell_SoilTemp/Campbell_ST_python/: README.md  convert.py
Models/test/: convert.sh  error.sh
SoilTOriginalImplementationNewType/UNIMI.SoilT.Interfaces/: UNIMI.SoilT.Interfaces.csproj
SoilTOriginalImplementationNewType/crop2ml/: composition.SurfacePartonSoilCampbellC.xml  composition.SurfacePartonSoilSWATC.xml  composition.SurfacePartonSoilSWATHourlyPartonC.xml  composition.SurfaceSWATSoilSWATC.xml  composition.ThermalDiffusivityC.xml  unit.HourlySoilTemperaturesPartonLogan.xml  unit.RangeOfSoilTemperaturesDAYCENT.xml  unit.SoilTemperatureCampbell.xml  unit.SoilTemperatureSWAT.xml  unit.SurfaceTemperatureParton.xml  unit.SurfaceTemperatureSWAT.xml  unit.ThermalConductivitySIMULAT.xml  unit.VolumetricHeatCapacityKluitenberg.xml
StandAlone/: CampbellWrapperPy.py  README.md
StandAlone/soiltempvisualea/: __wralea__.py  compare.py  configuration.py  model.py  simul.py  standalone.py
(+1552 files in other folders)
